big changes to scratchpad, not longer using pyprland

--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -15,4 +15,4 @@ env = VDPAU_DRIVER,va_gl
 env = GTK_IM_MODULE,cedilla
 env = QT_IM_MODULE,cedilla
 env = GTK_THEME,Nordic
-env = XCURSOR_THEME,GoogleDot-White
+env = XCURSOR_THEME,GoogleDot-Nord
