--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -17,6 +17,7 @@ group {
 }
 
 group:groupbar {
+    enabled = false
     text_color = $bg
     col.locked_active = $bg
     scrolling = false
@@ -40,7 +41,7 @@ decoration {
 }
 
 animations {
-  enabled = no
+  enabled = yes
 
   bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
