--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,75 +1,33 @@
-$reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
+workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
 
-$dropterm = ^(alacritty-dropterm)$
-windowrule = float,$dropterm
-windowrule = workspace special silent,$dropterm
-
-$canki = ^(canki)$
-windowrule = float,$canki
-windowrule = workspace special silent,$canki
-
-$todo = ^(neorg)$
-windowrule = float,$todo
-windowrule = workspace special silent,$todo
-
-$tt = ^(tt)$
-windowrule = float,$tt
-windowrule = workspace special silent,$tt
-
-$calc = ^(bc)$
-windowrule = float,$calc
-windowrule = workspace special silent,$calc
-
-$study = ^(study)$
-windowrule = float,$study
-windowrule = workspace special silent,$study
-
-$task = ^(task-tui)$
-windowrule = float,$task
-windowrule = workspace special silent,$task
-
-$clipse = ^(clipse)$
-windowrule = float,$clipse
-windowrule = workspace special silent,$clipse
-
-$btop = ^(btop)$
-windowrule = float,$btop
-windowrule = workspace special silent,$btop
-
-$bluetui = ^(bluetui)$
-windowrule = float,$bluetui
-windowrule = workspace special silent,$bluetui
-
-$noi = ^(Noi)$
-windowrule = float,$noi
-windowrule = workspace special silent,$noi
-
-$vimiv = ^(vimiv)$
-windowrule = float,$vimiv
-windowrule = workspace special silent,$vimiv
-
-
-$countdown = ^(countdown)$
-windowrule = float,$countdown
-windowrule = workspace special silent,$countdown
+workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound] foot -T task-tui -a task-tui -e taskwarrior-tui
+workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound] foot -T scratchpad -e aichat
+workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e btop
+workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound] foot -T scratchpad -e pulsemixer
+workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e cmus
+workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
+workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
 
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
-binde=,u,exec,$reset pypr toggle term
-binde=,w,exec,$reset pypr toggle whats
-binde=,g,exec,$reset pypr toggle calc
-binde=,n,exec,$reset pypr toggle notes
-binde=,h,exec,$reset pypr toggle habit
-binde=,i,exec,$reset pypr toggle ia
-binde=,p,exec,$reset pypr toggle pulse
-binde=,c,exec,$reset pypr toggle clipse
-binde=,l,exec,$reset pypr toggle stretch
-binde=,m,exec,$reset pypr toggle btop
-binde=,b,exec,$reset pypr toggle bluetui
-binde=,r,exec,$reset pypr toggle countdown
-binde=,v,exec,$reset pypr toggle vimiv
-binde=,t,exec,$reset pypr toggle task-tui
-#binde=,o,exec,$reset pypr toggle tt
-binde=,s,exec,$reset pypr toggle canki
+binde=,u,togglespecialworkspace, dropdown 
+bind=,u,submap,reset 
+binde=,t,togglespecialworkspace, todo
+bind=,t,submap,reset 
+binde=,i,togglespecialworkspace, ai
+bind=,i,submap,reset 
+binde=,m,togglespecialworkspace, btop
+bind=,m,submap,reset 
+binde=,c,togglespecialworkspace, cmus
+bind=,c,submap,reset 
+binde=,p,togglespecialworkspace, pulsemixer
+bind=,p,submap,reset 
+binde=,n,togglespecialworkspace, notes
+bind=,n,submap,reset 
+binde=,h,togglespecialworkspace, habits
+bind=,h,submap,reset 
 bind=,escape,submap,reset 
+bind=,catchall, submap, reset
 submap=reset
+
+
