removed some unused stuff and also added tabbed widget

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,9 +1,11 @@
 {
-    "modules-left": [ "hyprland/workspaces", "clock","hyprland/submap" ],
+    "modules-left": [ "hyprland/workspaces",  ],
+    "modules-center": ["clock","hyprland/submap"],
     "modules-right": [ 
       "custom/gameon",
       "custom/easy", 
       "custom/separator", 
+      "custom/tabbed",
       "custom/variant",
       "custom/updates", 
       "custom/pymor",
@@ -38,7 +40,7 @@
     },
     "clock": {
       "interval": 60,
-      "format": "                                                       {:%H:%M | %d | %a}",
+      "format": " {:%H:%M | %d | %a}",
       "tooltip": false
     },
     "hyprland/submap": {
@@ -60,6 +62,12 @@
     "custom/separator": {
       "format":"|",
       "interval": 3600
+    },
+    "custom/tabbed": {
+      "exec": "/home/digo/.config/waybar/scripts/tablayout.sh",
+      "interval": 2,
+      "return-type": "json",
+      "tooltip": false
     },
     "custom/variant": {
       "exec": "/home/digo/.config/waybar/scripts/key_variant.sh",
