added some animations to scratchpad

--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -1,4 +1,4 @@
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, T, exec, $terminal -T tmux -e tmux
 bind = $sS, C, killactive 
 bind = $mainMod, u, exec, 360.sh 252
 
