--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -51,6 +51,8 @@ animations {
   animation = borderangle, 1, 8, default
   animation = fade, 1, 7, default
   animation = workspaces, 1, 6, default
+  animation = specialWorkspaceIn, 1, 8, default, slidefade
+  animation = specialWorkspaceOut, 1, 8, default, slidevert
 }
 
 binds {
