--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,8 +1,8 @@
 workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float; move 10% 7%; size 80% 50%; rounding $scratchRound] alacritty --class alacritty-dropterm --config-file ~/.config/alacritty/scratchpad.toml -e bash -c 'tmux attach-session -t scratch || tmux new-session -s scratch'
 
-workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound] foot -T task-tui -a task-tui -e taskwarrior-tui
+workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; animation slide right] foot -T task-tui -a task-tui -e taskwarrior-tui
 workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound] foot -T scratchpad -e aichat
-workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e btop
+workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -a btop -e btop
 workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound] foot -T scratchpad -e pulsemixer
 workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e cmus
 workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
