new workspaces changes

--- a/.config/hypr/configs/submap.conf
+++ b/.config/hypr/configs/submap.conf
@@ -81,24 +81,24 @@ submap=reset
 
 bind=$mainMod,w,submap,workspace
 submap=workspace
-bind=,c,exec,$reset $dpatch workspace 1
-bind=,b,exec,$reset $dpatch workspace 2
-bind=,t,exec,$reset $dpatch workspace 3
-bind=,v,exec,$reset $dpatch workspace 4
-bind=,g,exec,$reset $dpatch workspace 5
-bind=,m,exec,$reset $dpatch workspace 6
+bind=,b,exec,$reset $dpatch workspace 1
+bind=,t,exec,$reset $dpatch workspace 2
+bind=,v,exec,$reset $dpatch workspace 3
+bind=,g,exec,$reset $dpatch workspace 4
+bind=,m,exec,$reset $dpatch workspace 5
+bind=,s,exec,$reset $dpatch workspace 6
 bind=,a,exec,$reset $dpatch workspace 7
 bind=,escape,submap,reset 
 submap=reset
 
 bind=$sS,w,submap,movetoworkspace
 submap=movetoworkspace
-bind=,c,exec,$reset $dpatch movetoworkspace 1
-bind=,b,exec,$reset $dpatch movetoworkspace 2
-bind=,t,exec,$reset $dpatch movetoworkspace 3
-bind=,v,exec,$reset $dpatch movetoworkspace 4
-bind=,g,exec,$reset $dpatch movetoworkspace 5
-bind=,m,exec,$reset $dpatch movetoworkspace 6
+bind=,b,exec,$reset $dpatch movetoworkspace 1
+bind=,t,exec,$reset $dpatch movetoworkspace 2
+bind=,v,exec,$reset $dpatch movetoworkspace 3
+bind=,g,exec,$reset $dpatch movetoworkspace 4
+bind=,m,exec,$reset $dpatch movetoworkspace 5
+bind=,s,exec,$reset $dpatch movetoworkspace 6
 bind=,a,exec,$reset $dpatch movetoworkspace 7
 bind=,escape,submap,reset 
 submap=reset
