--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -4,7 +4,7 @@ input {
     kb_variant = ,intl
     kb_model =
     kb_rules =
-    kb_options = grp:win_space_toggle
+    kb_options = grp:alt_shift_toggle
 
     touchpad {
         natural_scroll = no
