added whatsapp scratchpad

--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -14,5 +14,5 @@ env = LIBVA_DRIVER_NAME,i965
 env = VDPAU_DRIVER,va_gl
 env = GTK_IM_MODULE,cedilla
 env = QT_IM_MODULE,cedilla
-env = GTK_THEME,Nordic
+env = GTK_THEME,Nordic-darker
 env = XCURSOR_THEME,GoogleDot-Nord
