--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -3,10 +3,11 @@ workspace = special:dropdown, bordersize:$scratchBorder, on-created-empty:[float
 workspace = special:todo, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound; animation slide right] foot -T task-tui -a task-tui -e taskwarrior-tui
 workspace = special:ai, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 90%; rounding $scratchRound] foot -T scratchpad -e aichat
 workspace = special:btop, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -a btop -e btop
+workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] whatsie
 workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound] foot -T scratchpad -e pulsemixer
 workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e cmus
-workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
-workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
+workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 15%; size 70% 70%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
+workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
 
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
@@ -14,6 +15,8 @@ binde=,u,togglespecialworkspace, dropdown
 bind=,u,submap,reset 
 binde=,t,togglespecialworkspace, todo
 bind=,t,submap,reset 
+binde=,w,togglespecialworkspace, whats
+bind=,w,submap,reset 
 binde=,i,togglespecialworkspace, ai
 bind=,i,submap,reset 
 binde=,m,togglespecialworkspace, btop
