new scratchpad, some binds and hypridle changes

--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -8,15 +8,21 @@ workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[flo
 workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e cmus
 workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 15%; size 70% 70%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
 workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
+workspace = special:yazi, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -a yazi -e yazi
+workspace = special:countdown, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] foot -T scratchpad -e tclock_timer.sh
 
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
 binde=,u,togglespecialworkspace, dropdown 
 bind=,u,submap,reset 
+binde=,r,togglespecialworkspace, countdown 
+bind=,r,submap,reset 
 binde=,t,togglespecialworkspace, todo
 bind=,t,submap,reset 
 binde=,w,togglespecialworkspace, whats
 bind=,w,submap,reset 
+binde=,f,togglespecialworkspace, yazi
+bind=,f,submap,reset 
 binde=,i,togglespecialworkspace, ai
 bind=,i,submap,reset 
 binde=,m,togglespecialworkspace, btop
