--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,15 +1,15 @@
 listener {
-    timeout = 300                           # 5min
-    on-timeout = hyprlock                   # command to run when timeout has passed
+    timeout = 300                         
+    on-timeout = hyprlock                  
+}
+
+listener {
+    timeout = 600                           
+    on-timeout = hyprctl dispatch dpms off  
+    on-resume = hyprctl dispatch dpms on    
 }
 
 #listener {
-#    timeout = 10                           # 5.5min
-#    on-timeout = hyprctl dispatch dpms off  # command to run when timeout has passed
-#    on-resume = hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
-#}
-
-#listener {
-#    timeout = 1800                          # 30min
+#    timeout = 1800                      
 #    on-timeout = systemctl suspend
 #}
