--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -7,6 +7,7 @@ bind = $mainMod, k, layoutmsg,cycleprev
 #bind = $mainMod, P, focuscurrentorlast
 bind = $sS, M, layoutmsg,swapwithmaster 
 bind = $mainMod, M, layoutmsg,focusmaster
+bind = $mainMod, H, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 bind = $mainMod, K,changegroupactive, b
 bind = $mainMod, J,changegroupactive, f
