some new rules and changed terminal

--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -7,7 +7,7 @@ workspace = special:whats, bordersize:$scratchBorder, on-created-empty:[float; m
 workspace = special:pulsemixer, bordersize:$scratchBorder, on-created-empty:[float; move 68% 7%; size 30% 40%; rounding $scratchRound] foot -T scratchpad -e pulsemixer
 workspace = special:cmus, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -e cmus
 workspace = special:notes, bordersize:$scratchBorder, on-created-empty:[float; move 15% 15%; size 70% 70%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/notes/index.wiki
-workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] foot -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
+workspace = special:habits, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] kitty -T scratchpad -e vim ~/.vimwiki/habits/index.wiki
 workspace = special:yazi, bordersize:$scratchBorder, on-created-empty:[float; move 10% 10%; size 80% 80%; rounding $scratchRound] foot -T scratchpad -a yazi -e yazi
 workspace = special:countdown, bordersize:$scratchBorder, on-created-empty:[float; move 25% 10%; size 50% 50%; rounding $scratchRound] foot -T scratchpad -e tclock_timer.sh
 
