--- a/.config/hypr/configs/variables.conf
+++ b/.config/hypr/configs/variables.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER
 $sS = SUPERSHIFT
-$terminal = alacritty
+$terminal = kitty
 $runner = rofi -show run
 $browser = firefox
 $scratchBorder = 4
