--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,3 +8,4 @@ source = ~/.config/hypr/configs/binds.conf
 source = ~/.config/hypr/configs/submap.conf
 source = ~/.config/hypr/configs/scratchpads.conf
 source = ~/.config/hypr/configs/rules.conf
+source = ~/.config/hypr/configs/games-rules.conf
