--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -1,7 +1,7 @@
-env = MOZ_ENABLE_WAYLAND,1 
+env = MOZ_ENABLE_WAYLAND,1
 env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland
+env = QT_QPA_PLATFORM,wayland
+env = SDL_VIDEODRIVER,wayland,x11
 env = CLUTTER_BACKEND,wayland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
