--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -46,9 +46,9 @@ windowrulev2 = workspace 1 silent,class:^(org.mozilla.firefox)$,
 windowrulev2 = workspace 1,class:^(org.qutebrowser.qutebrowser)$
 windowrulev2 = workspace 2 silent,class:^(Alacritty)$
 windowrulev2 = workspace 3,class:^(mpv)$
-windowrulev2 = workspace 3,class:^(org.telegram.desktop)$
-windowrulev2 = workspace 3,class:^(org.pwmt.zathura)$
-windowrulev2 = workspace 3,class:^(anki)$
+windowrulev2 = workspace 6,class:^(org.telegram.desktop)$
+windowrulev2 = workspace 6,class:^(org.pwmt.zathura)$
+windowrulev2 = workspace 6,class:^(anki)$
 windowrulev2 = workspace 4 silent,class:^(org.libretro.RetroArch)$
 windowrulev2 = workspace 4 silent,class:^(pcsx2-qt)$
 windowrulev2 = workspace 4 silent,class:^(zenity)$,title:^(Steam Setup)$
@@ -59,8 +59,8 @@ windowrulev2 = workspace 4 silent,class:^(steam)$
 windowrulev2 = workspace 4 silent,class:^(xbox-joy)$
 windowrulev2 = workspace 4 silent,class:^(lutris)$
 windowrulev2 = workspace 5 silent,class:^(YouTube Music)$,title:^(YouTube Music)$
-windowrulev2 = workspace 5,class:^(DL: language lessons)$
-windowrulev2 = workspace 6 silent,class:^(Waydroid)$
+windowrulev2 = workspace 6,class:^(DL: language lessons)$
+windowrulev2 = workspace 6,class:^(com.github.xournalpp.xournalpp)$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
@@ -85,8 +85,7 @@ windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 # tab layout rules
 #
 windowrulev2 = group set always,class:^(.*)$
-windowrulev2 = group set always,class:(heroic)
-windowrulev2 = group set always,class:(lutris)
-windowrulev2 = group set always,class:(org.telegram.desktop)
-windowrulev2 = group set always,class:(DL: language lessons)
-
+#windowrulev2 = group set always,class:(heroic)
+#windowrulev2 = group set always,class:(lutris)
+#windowrulev2 = group set always,class:(org.telegram.desktop)
+#windowrulev2 = group set always,class:(DL: language lessons)
