--- a/.config/hypr/configs/submap.conf
+++ b/.config/hypr/configs/submap.conf
@@ -1,5 +1,5 @@
 $reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
-$dpatch = hyprctl dispatch
+  $dpatch = hyprctl dispatch
 #actions
 bind=$mainMod,a,submap,action
 submap=action
@@ -7,7 +7,7 @@ bind=,k,exec, $reset $dpatch killactive
 bind=,b,exec,$reset killall -SIGUSR2 waybar
 bind=,w,submap,window
 bind=,e,submap,effects
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 submap=resize
@@ -15,7 +15,7 @@ binde=,l,resizeactive,80 0
 binde=,h,resizeactive,-80 0
 binde=,k,resizeactive,0 -80
 binde=,j,resizeactive,0 80
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 submap=window
@@ -28,14 +28,14 @@ bind=,l,exec,$reset $dpatch focuscurrentorlast
 bind=,s,exec,$reset $dpatch swapwithmaster
 bind=,m,exec,$reset $dpatch focusmaster
 bind=,r,submap,resize
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 submap=pomo
-bind=,s,exec,$reset pymor
-bind=,l,exec,$reset pymor -l 2
+bind=,s,exec,$reset pymor -t 20
+bind=,l,exec,$reset pymor -t 20 -l 2
 bind=,c,exec,$reset pymor -c
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 #exec
@@ -54,19 +54,19 @@ bind=,o,exec,$reset wlogout
 bind=,h,exec, $reset cliphist list | rofi -config ~/.config/rofi/cliphist.rasi -dmenu | cliphist decode | wl-copy
 bind=,s,submap,studies
 bind=,p,submap,pomo
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 submap=studies
 bind=,m,exec,$reset maps.sh
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 submap=effects
 bind=,l,exec,$reset easyeffects -l 'LoudnessEqualizer'
 bind=,b,exec,$reset easyeffects -l 'Heavy Bass'
 bind=,p,exec,$reset easyeffects -l 'AAAAAAAaaaaa'
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 bind=$mainMod,L,submap,layout
@@ -76,7 +76,7 @@ bind=,k,exec,$reset $dpatch layoutmsg swapprev
 bind=,m,exec,$reset $dpatch layoutmsg focusmaster
 bind=,s,exec,$reset $dpatch layoutmsg swapwithmaster
 bind=,t,exec,$reset $dpatch togglegroup
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
 bind=$mainMod,w,submap,workspace
@@ -84,11 +84,11 @@ submap=workspace
 bind=,b,exec,$reset $dpatch workspace 1
 bind=,t,exec,$reset $dpatch workspace 2
 bind=,v,exec,$reset $dpatch workspace 3
-bind=,g,exec,$reset $dpatch workspace 4
+bind=,l,exec,$reset $dpatch workspace 4
 bind=,m,exec,$reset $dpatch workspace 5
 bind=,s,exec,$reset $dpatch workspace 6
-bind=,a,exec,$reset $dpatch workspace 7
-bind=,escape,submap,reset 
+bind=,g,exec,$reset $dpatch workspace 7
+bind=,escape,submap,reset
 submap=reset
 
 bind=$sS,w,submap,movetoworkspace
@@ -96,25 +96,25 @@ submap=movetoworkspace
 bind=,b,exec,$reset $dpatch movetoworkspace 1
 bind=,t,exec,$reset $dpatch movetoworkspace 2
 bind=,v,exec,$reset $dpatch movetoworkspace 3
-bind=,g,exec,$reset $dpatch movetoworkspace 4
+bind=,l,exec,$reset $dpatch movetoworkspace 4
 bind=,m,exec,$reset $dpatch movetoworkspace 5
 bind=,s,exec,$reset $dpatch movetoworkspace 6
-bind=,a,exec,$reset $dpatch movetoworkspace 7
-bind=,escape,submap,reset 
+bind=,g,exec,$reset $dpatch movetoworkspace 7
+bind=,escape,submap,reset
 submap=reset
 
 bind=$mainMod,p,submap,pymor
 submap=pymor
 bind=,s,exec,$reset pymor -t 20
 bind=,f,exec,$reset pymor -t 20 -f 3
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 submap=reset
 
-bind=$mainMod,v,submap,volume 
+bind=$mainMod,v,submap,volume
 submap=volume
 bind=,k,exec,$reset swayosd-client --output-volume raise
 bind=,j,exec,$reset swayosd-client --output-volume lower
-bind=,m,exec,$reset swayosd-client --output-volume mute-toggle 
-bind=,escape,submap,reset 
+bind=,m,exec,$reset swayosd-client --output-volume mute-toggle
+bind=,escape,submap,reset
 
 submap=reset
