--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -61,6 +61,7 @@ windowrulev2 = workspace 4 silent,class:^(lutris)$
 windowrulev2 = workspace 5 silent,class:^(YouTube Music)$,title:^(YouTube Music)$
 windowrulev2 = workspace 6,class:^(DL: language lessons)$
 windowrulev2 = workspace 6,class:^(com.github.xournalpp.xournalpp)$
+windowrulev2 = workspace 6,class:^(anki.desktop")$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
@@ -85,7 +86,3 @@ windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 # tab layout rules
 #
 windowrulev2 = group set always,class:^(.*)$
-#windowrulev2 = group set always,class:(heroic)
-#windowrulev2 = group set always,class:(lutris)
-#windowrulev2 = group set always,class:(org.telegram.desktop)
-#windowrulev2 = group set always,class:(DL: language lessons)
