--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -9,8 +9,8 @@ bind = $sS, M, layoutmsg,swapwithmaster
 bind = $mainMod, M, layoutmsg,focusmaster
 bind = $mainMod, H, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
-bind = $mainMod, K,changegroupactive, b
-bind = $mainMod, J,changegroupactive, f
+bind = $mainMod, J,changegroupactive, b
+bind = $mainMod, K,changegroupactive, f
 bind = $mainMod ,i,resizeactive,0 -80
 bind = $mainMod ,d,resizeactive,0 80
 
