--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -34,21 +34,28 @@ windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
 windowrulev2 = move 100 100,title:^(calculator)$
 windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
-# default to wks
-# title
-windowrulev2 = workspace 4 silent,title:^(Steam)$
 
-# class
+# default to wks
+# browsewks
 windowrulev2 = workspace 1 silent,class:^(firefox)$,
 windowrulev2 = workspace 1 silent,class:^(Brave-browser)$,
 windowrulev2 = workspace 1,class:^(floorp)$,
 windowrulev2 = workspace 1 silent,class:^(org.mozilla.firefox)$,
 windowrulev2 = workspace 1,class:^(org.qutebrowser.qutebrowser)$
+# terminalwks
 windowrulev2 = workspace 2 silent,class:^(Alacritty)$
+windowrulev2 = workspace 2 silent,class:^(kitty)$
+# videowks
 windowrulev2 = workspace 3,class:^(mpv)$
+# studywks
 windowrulev2 = workspace 6,class:^(org.telegram.desktop)$
 windowrulev2 = workspace 6,class:^(org.pwmt.zathura)$
 windowrulev2 = workspace 6,class:^(anki)$
+windowrulev2 = workspace 6,class:^(DL: language lessons)$
+windowrulev2 = workspace 6,class:^(com.github.xournalpp.xournalpp)$
+windowrulev2 = workspace 6,class:^(anki.desktop")$
+# gamewks
+windowrulev2 = workspace 4 silent,title:^(Steam)$
 windowrulev2 = workspace 4 silent,class:^(org.libretro.RetroArch)$
 windowrulev2 = workspace 4 silent,class:^(pcsx2-qt)$
 windowrulev2 = workspace 4 silent,class:^(zenity)$,title:^(Steam Setup)$
@@ -58,10 +65,8 @@ windowrulev2 = workspace 4 silent,class:^(heroic)$
 windowrulev2 = workspace 4 silent,class:^(steam)$
 windowrulev2 = workspace 4 silent,class:^(xbox-joy)$
 windowrulev2 = workspace 4 silent,class:^(lutris)$
+# class
 windowrulev2 = workspace 5 silent,class:^(YouTube Music)$,title:^(YouTube Music)$
-windowrulev2 = workspace 6,class:^(DL: language lessons)$
-windowrulev2 = workspace 6,class:^(com.github.xournalpp.xournalpp)$
-windowrulev2 = workspace 6,class:^(anki.desktop")$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
