--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,4 @@
-backend = "glx"
+backend = "glx";
 rules = (
 		{ match = "QTILE_INTERNAL = 1"; corner-radius = 0; },
 		{
@@ -22,6 +22,16 @@ rules = (
 			corner-radius = 10;
 		},
 		{
+			match = "name = 'dropdown'";
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
+			corner-radius = 10;
+		},
+		{
+			match = "name = 'dropdown'";
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "up" },);
+			corner-radius = 10;
+		},
+		{
 			match = "name = 'scratchpad'";
 			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
@@ -39,6 +49,16 @@ rules = (
 		{
 			match = "class_g = 'right_side'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "right" },);
+			corner-radius = 10;
+		},
+		{
+			match = "class_g = 'left_side'";
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "down" },);
+			corner-radius = 10;
+		},
+		{
+			match = "class_g = 'left_side'";
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "left" },);
 			corner-radius = 10;
 		},
 		{
