changed direction of some windows animation

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,11 +2,6 @@ backend = "glx";
 rules = (
 		{ match = "QTILE_INTERNAL = 1"; corner-radius = 0; },
 		{
-			match = "class_g = 'Whatsapp-for-linux'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-		},
-		{
 			match = "class_g = 'cmus'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
 			corner-radius = 10;
@@ -17,8 +12,13 @@ rules = (
 			corner-radius = 10;
 		},
 		{
-			match = "class_g = 'Whatsapp-for-linux'";
+			match = "class_g = 'Wasistlos'";
 			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
+			corner-radius = 10;
+			},
+			{
+			match = "class_g = 'Wasistlos'";
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 		},
 		{
@@ -43,7 +43,7 @@ rules = (
 		},
 		{
 			match = "class_g = 'right_side'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "right" },);
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 		},
 		{
@@ -53,7 +53,7 @@ rules = (
 		},
 		{
 			match = "class_g = 'left_side'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "down" },);
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
 			corner-radius = 10;
 		},
 		{
